--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV AVAROZ</title>
 
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="description"
+        content="CV de Tomas Felipe Jimenez Medina como desarrollador.">
+    <meta name="keywords"
+        content="nezos games, nezos, cv, hoja de vida, indie, games, videogame, videogame developer, blog, devlog, assets, unreal engine, unity 3d, egos, the legacy of music">
+    <meta name="author" content="AVAROZ">
 
+    <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
@@ -408,8 +413,8 @@
                         <a href="mailto:avaroz@nezosgames.com">
                             <h3><i class='bx bx-envelope'></i> avaroz@nezosgames.com</h3>
                         </a>
-                        <a href="https://t.me/AvarozDev">
-                            <h3><i class='bx bxl-telegram'></i> Telegram</h3>
+                        <a href="https://t.me/AvarozDev" target="_blank">
+                            <h3><i class='bx bxl-telegram'></i> t.me/AvarozDev</h3>
                         </a>
 
 
@@ -420,10 +425,11 @@
         </div>
     </main>
     <footer class="footer">
-        <P>© 2023 - Created by <a class="link" href="#" rel="noreferrer noopener nofollow" target="_blank">AVAROZ.</a>
+        <P>© 2023 - Created by <a class="link" href="https://github.com/avaroz" rel="noreferrer noopener nofollow"
+                target="_blank">AVAROZ.</a>
         </P>
     </footer>
-    <script src='https://cdn.statically.io/gh/subxanima/clanautomata/master/js/jquery-2.1.1.js'></script>
+    <script src='./js/jquery-2.1.1.js'></script>
     <script>
         /*
         Código tomado de: 
@@ -480,6 +486,3 @@
 </body>
 
 </html>
-
-<head>
-</head>
