--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CV AVAROZ</title>
+    <title>CV Tomas Jimenez M. (AVAROZ)</title>
 
+    <link href='./media/favicon.ico' rel='icon' type='image/x-icon' />
     <meta name="description"
         content="CV de Tomas Felipe Jimenez Medina como desarrollador.">
     <meta name="keywords"
@@ -26,7 +27,7 @@
                     <div class="modulo card_profile">
                         <img src="media/perfil.jpg" class="card_profile_img" alt="">
                         <h2>Tomas Jimenez M.</h2>
-                        <span>Dev</span>
+                        <span>Desarrollador</span>
                         <div>
                             <a href="https://www.youtube.com/@avaroz" title="Youtube" target="_blank"><i
                                     class='bx bxl-youtube'></i></a>
