--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <title>CV Tomas Jimenez M. (AVAROZ)</title>
 
     <link href='./media/favicon.ico' rel='icon' type='image/x-icon' />
-    <meta name="description"
-        content="CV de Tomas Felipe Jimenez Medina como desarrollador.">
+    <meta name="description" content="CV de Tomas Felipe Jimenez Medina como desarrollador.">
     <meta name="keywords"
         content="nezos games, nezos, cv, hoja de vida, indie, games, videogame, videogame developer, blog, devlog, assets, unreal engine, unity 3d, egos, the legacy of music">
     <meta name="author" content="AVAROZ">
@@ -29,6 +28,8 @@
                         <h2>Tomas Jimenez M.</h2>
                         <span>Desarrollador</span>
                         <div>
+                            <a href="https://github.com/avaroz" target="_blank" title="GitHub"><i
+                                    class='bx bxl-github'></i></a>
                             <a href="https://www.youtube.com/@avaroz" title="Youtube" target="_blank"><i
                                     class='bx bxl-youtube'></i></a>
                             <a href="https://www.linkedin.com/in/avaroz/" title="Linkedin" target="_blank"><i
