--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
 </head>
 
@@ -54,10 +55,10 @@
                                 <i class='bx bxl-telegram'></i> t.me/AvarozDev
                             </li>
                         </ul>
-                        <button class="btn" type="submit" onclick="window.open('media/TomasJimenezCV.pdf')"><i
+                        <button class="btn animate__animated animate__shakeX" type="submit" onclick="window.open('media/TomasJimenezCV.pdf')"><i
                                 class='bx bxs-download'></i> Descargar CV</button>
                     </div>
-                    <ul class="toc-list" id="toc-list">
+                    <ul class="toc-list animate__animated animate__fadeInUp" id="toc-list">
                         <li class="toc-list-item is-active-link">
                             <a href="#" class="toc-link is-active-link">Sobre mi</a>
                         </li>
